--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -6,21 +6,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 64px;
+    min-height: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding-right: 24px;
     padding-left: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: #fff;
-    background-color: #3f51b5;
-    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-        0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    background-color: rgba(32, 145, 220, 0.903);
+    /* box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+        0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12); */
 }
 
 .searchForm {
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 60%;
     max-width: 600px;
     background-color: #fff;
     border-radius: 3px;
