--- a/src/components/TrendingMovies/TrendingMovies.module.css
+++ b/src/components/TrendingMovies/TrendingMovies.module.css
@@ -1,32 +1,19 @@
 
-
 .title{
+    color: rgba(4, 57, 92, 0.903);
+
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 1.36;
     text-align: center;
     text-transform: uppercase;
-}
+    padding: 5px;
 
-.list {
-    list-style: none;
-    padding-left: 5px;
+    margin-right: auto;
+    margin-left: auto;
 
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -30px;
-    margin-left: -30px;
-}
+    width: 55%;
 
-.item{
-    flex-basis: calc(100%/3 - 30px);
-    margin-top: 30px;
-    margin-left: 30px;
-}
-
-.movie{
-    text-decoration: none;
-}
-
-.img{
-    width: 300px;
-    
-    margin-bottom: 10px;
+    border-top: 1px solid rgba(4, 57, 92, 0.903);
+    border-bottom: 1px solid rgba(4, 57, 92, 0.903);
 }
