backBtn-style-work-perfect

--- a/src/components/MessageTitle/MessageTitle.module.css
+++ b/src/components/MessageTitle/MessageTitle.module.css
@@ -29,7 +29,7 @@
     margin-top: 20px;
 
     border-width: 1px;
-    border-style: dashed solid;
+    /* border-style: dashed solid; */
     border-color: rgba(4, 57, 92, 0.903);
 }
 
